md-docs/smartcaptcha/cli-ref/v1/index.md
[Документация Yandex Cloud](../../../index.md) > [Yandex SmartCaptcha](../../index.md) > [Справочник CLI (англ.)](../index.md) > v1 > Overview

# yc smartcaptcha v1

Manage SmartCaptcha resources

#### Command Usage

Syntax:

`yc smartcaptcha v1 <group>`

#### Command Tree

- [yc smartcaptcha v1 captcha](captcha/index.md) — A set of methods for managing Captcha resources.

  - [yc smartcaptcha v1 captcha create](captcha/create.md) — Creates a captcha in the specified folder using the data specified in the request.

  - [yc smartcaptcha v1 captcha delete](captcha/delete.md) — Deletes the specified captcha.

  - [yc smartcaptcha v1 captcha get](captcha/get.md) — Returns the specified Captcha resource.

  - [yc smartcaptcha v1 captcha get-keys](captcha/get-keys.md) — Returns the keys of specified Captcha resource.

  - [yc smartcaptcha v1 captcha get-secret-key](captcha/get-secret-key.md) — Returns the secret data of specified Captcha resource.

  - [yc smartcaptcha v1 captcha list](captcha/list.md) — Retrieves the list of Captcha resources in the specified folder.

  - [yc smartcaptcha v1 captcha update](captcha/update.md) — Updates the specified captcha.

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text, yaml, json, table, summary \|\| summary[name, instance.id, instance.disks[0].size]. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the IAM token to use. ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#